Fix for issue #6 (progress bar text overflow)

--- a/space.css
+++ b/space.css
@@ -1,1 +1,19 @@
+/* progress bar fixes begin */
+.progress-bar2 span {
+  position: absolute !important;
+  display: inline-block !important;
+  margin-top: 5px !important;
+  margin-bottom: 5px !important;
+  top: 0 !important;
+  bottom: 0 !important;
+}
 
+.progress-bar2 {
+  height: auto !important;
+}
+
+.progress-bar2 div {
+  z-index: 99 !important;
+  text-shadow: 0 0 0.1em black, 0 0 0.2em black !important;
+}
+/* progress bar fixes end */
